--- a/config/database.yml
+++ b/config/database.yml
@@ -1,8 +1,8 @@
 default: &default
   adapter: postgresql
   encoding: unicode
-  user: coding
-  password: 971027
+  user: postgres
+  password: root
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
 
 development:
